--- a/CounterProject/index.html
+++ b/CounterProject/index.html
@@ -11,7 +11,7 @@
     <h1 class="count">0</h1>
     <button class="minus-btn" >-</button>
     <button class="plus-btn">+</button>
-
-    
+<div>increment/deceremnt: <input class="changeBy" type="number" value="1"></div>
+    <button>Reset</button>
 </body>
 </html>
