--- a/CounterProject/index.html
+++ b/CounterProject/index.html
@@ -8,10 +8,11 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-    <h1 class="count">0</h1>
+<h2>Conuter</h2>
+    <h3 class="count">0</h3>
     <button class="minus-btn" >-</button>
     <button class="plus-btn">+</button>
 <div>increment/deceremnt: <input class="changeBy" type="number" value="1"></div>
-    <button>Reset</button>
+    <button class="reset">Reset</button>
 </body>
 </html>
