--- a/AdventLisner/index.html
+++ b/AdventLisner/index.html
@@ -9,9 +9,9 @@
     <script src="script.js" defer></script>
   </head>
   <body style="font-family: cursive;">
-    <h1 onclick="console.log('Hello')">Adding Event Listeners</h1>
-    <div class="container">
-      <div class="card">1</div>
+    <h1 >Adding Event Listeners</h1>
+    <div ondblclick="console.log('Helllloooo')" class="container">
+      <div  class="card">1</div>
     </div>
   </body>
 </html>
